Changes on the itinerary page

--- a/_pgbackup/itinerary_1517928926.html
+++ b/_pgbackup/itinerary_1517928926.html
@@ -46,8 +46,15 @@
                 </ul>
             </div>
         </div>
+        <li class="pagination-previous">Previous 
+            <span class="show-for-sr">page</span>
+        </li>
         <div class="grid-container">
             <div class="grid-y">
+                <div class="grid-x">
+                    <img src="http://pinegrow.com/placeholders/img17.jpg" />
+                </div>
+                <div class="grid-x pg-empty-placeholder"></div>
                 <div class="grid-x pg-empty-placeholder"></div>
             </div>
         </div>
