--- a/_pgbackup/user_dashboard_1518015045.html
+++ b/_pgbackup/user_dashboard_1518015045.html
@@ -50,8 +50,9 @@
             <div class="grid-y">
                 <div class="grid-x pg-empty-placeholder"></div>
                 <div class="grid-x">
+                    <a href="#" class="button">Create new route</a>
                     <button value="Button" class="button" data-open="modal151">Open modal</button>
-                    <div class="reveal " id="modal151" data-reveal> 
+                    <div class="reveal" id="modal151" data-reveal> 
                         <h1>Awesome. I Have It.</h1> 
                         <p class="lead">Your couch. It is mine.</p> 
                         <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p> 
@@ -63,30 +64,7 @@
                 <div class="grid-x">
                     <h2>Routes</h2>
                 </div>
-                <div class="grid-x grid-padding-x">
-                    <div class="cell medium-12">
-                        <label>Where do you want to go? 
-                            <small>You'll be able to add other routes later on</small>
-                            <input type="text" placeholder="Enter a city / region">
-                        </label>
-                    </div>
-                    <div class="medium-6 cell" id="start-date">
-                        <label>Start date
-                            <input type="text" placeholder="dd/mm/yyyy" id="start-date-input">
-                        </label>
-                    </div>
-                    <div class="medium-6 cell" id="end-date">
-                        <label>End date
-                            <input type="text" placeholder="dd/mm/yyyy" id="end-date-input">
-                        </label>
-                    </div>
-                    <div class="cell text-center medium-12">
-                        <a class="button text-center">Create itinerary</a> 
-                    </div>
-                    <button class="close-button" data-close aria-label="Close reveal" type="button"> 
-                        <span aria-hidden="true">&times;</span> 
-                    </button>
-                </div>
+                <div class="grid-x"></div>
             </div>
         </div>
         <!-- Footer -->
