--- a/_pgbackup/user_dashboard_1518020442.html
+++ b/_pgbackup/user_dashboard_1518020442.html
@@ -65,27 +65,23 @@
                 </div>
                 <div class="grid-x grid-padding-x">
                     <div class="cell medium-12">
-                        <label>Where do you want to go? 
-                            <small>You'll be able to add other routes later on</small>
-                            <input type="text" placeholder="Enter a city / region">
+                        <label>Input Label
+                            <input type="text" placeholder=".medium-6.cell">
                         </label>
                     </div>
-                    <div class="medium-6 cell" id="start-date">
-                        <label>Start date
-                            <input type="text" placeholder="dd/mm/yyyy" id="start-date-input">
+                    <div class="medium-6 cell">
+                        <label>Input Label
+                            <input type="text" placeholder=".medium-6.cell">
                         </label>
                     </div>
-                    <div class="medium-6 cell" id="end-date">
-                        <label>End date
-                            <input type="text" placeholder="dd/mm/yyyy" id="end-date-input">
+                    <div class="medium-6 cell">
+                        <label>Input Label
+                            <input type="text" placeholder=".medium-6.cell">
                         </label>
                     </div>
                     <div class="cell text-center medium-12">
-                        <a class="button text-center">Create itinerary</a> 
+                        <a class="button text-center">One</a>                                                   
                     </div>
-                    <button class="close-button" data-close aria-label="Close reveal" type="button"> 
-                        <span aria-hidden="true">&times;</span> 
-                    </button>
                 </div>
             </div>
         </div>
