--- a/_pgbackup/user_dashboard_1518020796.html
+++ b/_pgbackup/user_dashboard_1518020796.html
@@ -70,12 +70,12 @@
                             <input type="text" placeholder="Enter a city / region">
                         </label>
                     </div>
-                    <div class="medium-6 cell" id="start-date">
+                    <div class="medium-6 cell">
                         <label>Start date
                             <input type="text" placeholder="dd/mm/yyyy" id="start-date-input">
                         </label>
                     </div>
-                    <div class="medium-6 cell" id="end-date">
+                    <div class="medium-6 cell">
                         <label>End date
                             <input type="text" placeholder="dd/mm/yyyy" id="end-date-input">
                         </label>
