--- a/_pgbackup/user_dashboard_1518018165.html
+++ b/_pgbackup/user_dashboard_1518018165.html
@@ -63,29 +63,31 @@
                 <div class="grid-x">
                     <h2>Routes</h2>
                 </div>
-                <div class="grid-x grid-padding-x">
-                    <div class="cell medium-12">
-                        <label>Where do you want to go? 
-                            <small>You'll be able to add other routes later on</small>
-                            <input type="text" placeholder="Enter a city / region">
-                        </label>
+                <div class="grid-y">
+                    <div class="grid-x grid-padding-x">
+                        <div class="cell medium-12">
+                            <label>Input Label
+                                <input type="text" placeholder=".medium-6.cell">
+                            </label>
+                        </div>
                     </div>
-                    <div class="medium-6 cell" id="start-date">
-                        <label>Start date
-                            <input type="text" placeholder="dd/mm/yyyy" id="start-date-input">
-                        </label>
+                    <div class="grid-x grid-padding-x">
+                        <div class="medium-6 cell">
+                            <label>Input Label
+                                <input type="text" placeholder=".medium-6.cell">
+                            </label>
+                        </div>
+                        <div class="medium-6 cell">
+                            <label>Input Label
+                                <input type="text" placeholder=".medium-6.cell">
+                            </label>
+                        </div>
                     </div>
-                    <div class="medium-6 cell" id="end-date">
-                        <label>End date
-                            <input type="text" placeholder="dd/mm/yyyy" id="end-date-input">
-                        </label>
+                    <div class="grid-x grid-padding-x">
+                        <div class="button-group expanded"> 
+                            <a class="button">One</a>                                                           
+                        </div>
                     </div>
-                    <div class="cell text-center medium-12">
-                        <a class="button text-center">Create itinerary</a> 
-                    </div>
-                    <button class="close-button" data-close aria-label="Close reveal" type="button"> 
-                        <span aria-hidden="true">&times;</span> 
-                    </button>
                 </div>
             </div>
         </div>
