--- a/_pgbackup/user_dashboard_1518020602.html
+++ b/_pgbackup/user_dashboard_1518020602.html
@@ -70,14 +70,14 @@
                             <input type="text" placeholder="Enter a city / region">
                         </label>
                     </div>
-                    <div class="medium-6 cell" id="start-date">
+                    <div class="medium-6 cell">
                         <label>Start date
-                            <input type="text" placeholder="dd/mm/yyyy" id="start-date-input">
+                            <input type="text" placeholder="dd/mm/yyyy" id="start-date">
                         </label>
                     </div>
-                    <div class="medium-6 cell" id="end-date">
+                    <div class="medium-6 cell">
                         <label>End date
-                            <input type="text" placeholder="dd/mm/yyyy" id="end-date-input">
+                            <input type="text" placeholder="dd/mm/yyyy" id="end-date">
                         </label>
                     </div>
                     <div class="cell text-center medium-12">
